GNOME Bugzilla – Bug 719972
Fix critical warnings on shutdown
Last modified: 2013-12-10 15:06:50 UTC
On ordered shutdown, the wacom plugin attempts to unset the passive grabs on pad buttons, but the code seems to confuse GdkDevices with GsdWacomDevices, causing critical warnings mainly (the passive grabs wouldn't stay long anyway if the client disappears). I'm attaching a patch to fix this
Created attachment 263668 [details] [review] wacom: Fix critical warnings on shutdown GdkDevices aint' GsdWacomDevices, so lookup the latter from the former.
Review of attachment 263668 [details] [review]: Looks good.
Attachment 263668 [details] pushed as 935a0b1 - wacom: Fix critical warnings on shutdown