wacom: Fix critical warnings on shutdown

GdkDevices aint' GsdWacomDevices, so lookup the latter from the former.

https://bugzilla.gnome.org/show_bug.cgi?id=719972